# fonts-siampradesh

./: ChangeLog  configure.ac
02-SP-Thotsakan/: SPThotsakan-Bold.sfd  SPThotsakan-BoldOblique.sfd  SPThotsakan-Oblique.sfd
02-TH-Krub/: THKrub-Bold.sfd  THKrub-BoldItalic.sfd  THKrub-Italic.sfd  THKrub.sfd
04-SP-Rama/: Makefile.am  SPRama-Bold.sfd  SPRama-BoldOblique.sfd  SPRama-Oblique.sfd
04-TH-Niramit-AS/: Makefile.am  THNiramitAS-Bold.sfd  THNiramitAS-BoldItalic.sfd  THNiramitAS-Italic.sfd  THNiramitAS.sfd
06-SP-Sinsamut/: Makefile.am  SPSinsamut-Bold.sfd  SPSinsamut-BoldOblique.sfd  SPSinsamut-Oblique.sfd
06-TH-Kodchasal/: Makefile.am  SPSinsamut-Oblique.sfd  THKodchasal-Bold.sfd  THKodchasal-BoldItalic.sfd  THKodchasal-Italic.sfd  THKodchasal.sfd
07-SP-Laksaman/: Makefile.am  SPLaksaman-Bold.sfd  SPLaksaman-BoldItalic.sfd  SPLaksaman-Italic.sfd  SPLaksaman.sfd
07-TH-Sarabun-PSK/: THSarabunPSK-Bold.sfd  THSarabunPSK-BoldItalic.sfd  THSarabunPSK-Italic.sfd  THSarabunPSK.sfd
08-SP-Sida/: SPSida-Bold.sfd  SPSida-BoldOblique.sfd  SPSida-Oblique.sfd  SPSida.sfd
08-TH-K2D-July8/: Makefile.am  SPSida-Oblique.sfd  THK2DJuly8-Bold.sfd  THK2DJuly8-BoldItalic.sfd  THK2DJuly8-Italic.sfd  THK2DJuly8.sfd
09-SP-Sutsakhorn/: SPSutsakhorn-Bold.sfd  SPSutsakhorn-BoldOblique.sfd  SPSutsakhorn-Oblique.sfd  SPSutsakhorn.sfd
09-TH-Mali-Grade-6/: Makefile.am  SPSutsakhorn-Bold.sfd  SPSutsakhorn-Oblique.sfd  THMaliGrade6-Bold.sfd  THMaliGrade6-BoldItalic.sfd  THMaliGrade6-Italic.sfd  THMaliGrade6.sfd
10-SP-Ramasun/: Makefile.am  SPRamasun-Bold.sfd  SPRamasun-BoldOblique.sfd  SPRamasun-Oblique.sfd  SPRamasun.sfd
10-TH-Chakra-Petch/: Makefile.am  THChakraPetch-Bold.sfd  THChakraPetch-BoldItalic.sfd  THChakraPetch-Italic.sfd  THChakraPetch.sfd
11-SP-Laweng/: Makefile.am  SPLaweng-Bold.sfd  SPLaweng-BoldOblique.sfd  SPLaweng-Oblique.sfd  SPLaweng.sfd
11-TH-Baijam/: THBaijam-Bold.sfd  THBaijam-BoldItalic.sfd  THBaijam-Italic.sfd  THBaijam.sfd
12-SP-Aphaimanee/: SPAphaimanee-Bold.sfd  SPAphaimanee-BoldOblique.sfd  SPAphaimanee.sfd
12-TH-KoHo/: Makefile.am  SPAphaimanee-Oblique.sfd  THKoHo-Bold.sfd  THKoHo-BoldItalic.sfd  THKoHo-Italic.sfd  THKoHo.sfd
13-SP-Hanuman/: Makefile.am  SPHanuman-Bold.sfd  (+3 more)
branches/tlwg/07-TH-Sarabun-PSK/: Makefile.am
(+188 files in other folders)
